--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+	background-color: #EEEEEE;
+}
+
 .wrapper {
 	text-align: center;
 }
@@ -10,7 +14,7 @@
 }
 .content{
 	
-    width: 70%;
+    width: 63%;
     margin-left: 4%;
 
 }
@@ -20,19 +24,33 @@
 .sidebar{
 	max-width:468px;
 	display:inline-block;
-	position: absoulte;
-    width: 20%;
+    width: 27%;
     float: right;
     top: 92px;
     position: absolute;
-    right: 10%;
+    right: 5%;
+	background-color: white;
+	box-shadow: rgba(0, 0, 0, 0.0976562) 0px 1px 2px;
+	margin-top:30px;
 }
 .description{
 	text-align: left;
-	margin-top: 15px;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.0976562) 0px 1px 2px;
+    padding: 12px;
+    margin-top: 15px;
+
 }
 .description span{
     font-weight: bold;
+}
+.video{
+	
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.0976562) 0px 1px 2px;
+    padding: 12px;
+    margin-top: 15px;
+
 }
 .logo {
 	height: inherit;
@@ -75,6 +93,8 @@
 }
 .related-videos{
 	list-style: none;
+	padding: 0;
+	padding-top: 25px;
 }
 
 
@@ -105,6 +125,11 @@ h4{
 }
 .title{
 	text-align: left;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.0976562) 0px 1px 2px;
+    padding: 12px;
+    margin-top: 15px;
+
 }
 .author-info, .views {
 	display: inline-block;
