--- a/style.css
+++ b/style.css
@@ -11,11 +11,18 @@ body{
 	top: 0;
 	left: 0;
 	display: inline-block;
+    background-color: white;
+    width: 100%;
+    padding-top: 0;
+    position: absolute;
+    box-shadow: rgba(0, 0, 0, 0.0976562) 0px 1px 2px;
+
 }
 .content{
 	
     width: 63%;
     margin-left: 4%;
+	margin-top: 80px;
 
 }
 .video-container {
@@ -31,7 +38,6 @@ body{
     right: 5%;
 	background-color: white;
 	box-shadow: rgba(0, 0, 0, 0.0976562) 0px 1px 2px;
-	margin-top:30px;
 }
 .description{
 	text-align: left;
@@ -49,7 +55,7 @@ body{
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.0976562) 0px 1px 2px;
     padding: 12px;
-    margin-top: 15px;
+    margin-top: 12px;
 
 }
 .logo {
