Added history icon to navbar

--- a/style.css
+++ b/style.css
@@ -105,7 +105,19 @@ body{
     margin-left: 25px;
 	position: relative;
 	top: 10px;
+}
 
+.history-button {
+	background-image:url('./img/buttons.png');
+	background-color: transparent;
+	width:16px;
+	height:21px;
+	display:inline-block;
+	background-position: -213px -605px;
+	background-repeat: no-repeat;
+    margin-left: 25px;
+	position: relative;
+	top: 10px;
 }
 .search-input{
 		width: 45%;
