--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 	text-align: center;
 }
 
-.navbar {
+header {
 	max-height: 50px;
 	padding-top: 25px;
 	padding-bottom: 25px;
@@ -21,7 +21,7 @@ body {
 	text-align: right
 }
 
-.content {
+main {
     width: 63%;
     margin-left: 4%;
 	margin-top: 80px;
